--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link href=reousrces/css/reset.css rel="stylesheet" type="text/css">
   </head>
   <body>
+    <!--header begin-->
+    <header>
+      <nav class="container">
+        <div>
+          <img src="resources/photo/logo-white.png">
+          <span>Tortoiseshell Optics</span>
+        </div>
+        <div class="menu">
+          <ul>
+            <li>Service</li>
+            <li>Products</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </nav>
+      <div class="flex container">
+        <div class="main-banner">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
+      </div>  
+    </header>
+    <!--header end!-->
 
   </body>
 </html>
