desktop version finish

--- a/index.html
+++ b/index.html
@@ -26,9 +26,52 @@
         <div class="main-banner">
           <h1>DON'T JUST LOOK, SEE.</h1>
         </div>
-      </div>  
+      </div>
     </header>
     <!--header end!-->
+    <!--Supporting Section Begin-->
+    <section class="supporting">
+      <div class="service">
+        <img class="paper-icon" src="resources/photo/paper-icon.png">
+        <div>Comperehensive Exams</div>
+      </div>
+      <div class="service">
+        <img src="resources/photo/ruler-icon.png">
+        <div>Custom Fittings</div>
+      </div>
+      <div class="service">
+        <img src="resources/photo/truck-icon.png">
+        <div>Fast Delivery</div>
+      </div>
+    </section>
+    <!--Supporting Section End-->
+    <!--Information Section Begin-->
+    <section class="supporting container">
+      <div class="info">
+        <div class="title">PHILOSOPHY</div>
+        <P>Over 75% of our brains are dedicated to one sense: vision.
+          We believe everyone deserves to see the world, not matter what.
+          That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
+          It’s your vision that makes ours.</P>
+      </div>
+      <div class="info">
+        <div class="title">APPOINTMENTS</div>
+        <P>Schedule an appointment by calling us at (312) 654-0987.
+           We’re open Tuesday - Saturday, 9AM - 6PM.</P>
+      </div>
+    </section>
+    <!--Information Section End-->
+    <!--Footer Begin-->
+    <footer class="container">
+      <div class="footer-img">
+        <img src="resources/photo/logo-black.png">
+      </div>
+      <span>Copyright Tortoiseshell Optics</span>
+    </footer>
+    <!--Footer End-->
+
+
+
 
   </body>
 </html>
